# glovpy

./: README.md  pyproject.toml
glopy/: __init__.py  install.py  train.py  utils.py
glovpy/: __init__.py  train.py
