[tool.black]
line-length=79

[tool.poetry]
name = "glopy"
version = "0.1.0"
description = "Interface for using the canonical C GloVe embedding implementation in Python"
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
